chore: use secondary image for psql

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,31 +3,45 @@ jobs:
   build:
     docker:
       - image: circleci/node:9.11.1
+      - image: postgres:latest
+      environment:
+        POSTGRES_USER: marketplace
+        POSTGRES_DB: marketplace
     working_directory: /tmp/marketplace
     steps:
-      - setup_remote_docker
       - checkout
       - run:
           name: Install system dependencies
           command: sudo apt-get update && sudo apt install -y libusb-1.0-0 libusb-1.0-0-dev
       - restore_cache:
           keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-
+      - run: 
+          name: (backend) Install packages
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          name: (backend) Build
+          command: npm run build:ci
+          environment:
+            CONNECTION_STRING: 'postgres://marketplace@localhost:5432/marketplace'
+      - restore_cache:
+          keys:
           - v1-dependencies-{{ checksum "webapp/package.json" }}
           - v1-dependencies-
       - run: 
-          name: Install packages
+          name: (frontend) Install packages
           command: cd webapp && npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "webapp/package.json" }}
       - run:
-          name: Build backend
-          command: npm run build:ci
-          environment:
-            CONNECTION_STRING: 'postgres://magiklander@localhost:5432/marketplace'
-      - run:
-          name: Build frontend
+          name: (frontend) Build
           command: cd webapp && npm run build
           environment:
             NODE_PATH: src/
