--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "monitor-blockchain": "./scripts/monitor/index.js store",
     "cli": "./scripts/mktcli.js",
     "build": "npm run lint && npm run test",
-    "build:ci": "docker-compose up -d postgres && npm run build",
+    "build:ci": "npm run migrate up && npm run build",
     "start": "cd src && babel-node server.js",
     "dev": "nodemon --exec npm run start"
   },
