--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,8 +29,10 @@
     "eslint-plugin-react": "^7.5.1",
     "ethereum-blockies": "^0.1.1",
     "history": "^4.7.2",
+    "impetus": "^0.8.7",
     "leaflet": "^1.3.0",
     "lodash.debounce": "^4.0.8",
+    "mouse-wheel": "^1.2.0",
     "prettier": "^1.10.2",
     "prop-types": "^15.5.10",
     "query-string": "^5.1.0",
@@ -52,6 +54,8 @@
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.2.14",
     "semantic-ui-react": "^0.78.2",
+    "touch-pinch": "^1.0.1",
+    "touch-position": "^2.0.0",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
