--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.18.2",
     "commander": "^2.15.1",
-    "decentraland-commons": "^4.0.0",
-    "decentraland-eth": "^1.3.0",
+    "decentraland-commons": "^4.0.1",
+    "decentraland-eth": "^1.3.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "flat": "^4.0.0",
@@ -57,7 +57,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^4.12.1",
+    "eslint": "4.10.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.5.1",
