--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,7 +9,8 @@
     "lint": "./node_modules/eslint/bin/eslint.js src/",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix src/",
     "test": "CI=true react-scripts test --env=jsdom",
-    "prebuild": "npm run test && ./node_modules/.bin/babel ./node_modules/decentraland-eth --out-dir ./node_modules/decentraland-eth",
+    "compile-deps": "npx babel ./node_modules/decentraland-eth --out-dir ./node_modules/decentraland-eth && npx babel ./node_modules/web3-provider-engine --out-dir ./node_modules/web3-provider-engine",
+    "prebuild": "npm run test && npm run compile-deps",
     "build": "REACT_APP_VERSION=$(git rev-parse --short HEAD) react-scripts build",
     "remotebuild": "REACT_APP_VERSION=$(git rev-parse --short HEAD) NODE_PATH=/tmp/auction/webapp/node_modules react-scripts build",
     "eject": "react-scripts eject"
@@ -20,8 +21,8 @@
     "babel-polyfill": "^6.26.0",
     "date-fns": "^1.29.0",
     "decentraland-commons": "^4.0.1",
-    "decentraland-eth": "^1.3.0",
-    "eslint": "^4.15.0",
+    "decentraland-eth": "^1.3.3",
+    "eslint": "4.10.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.5.1",
