feat: change ORM to sequalize

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix .",
     "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js",
     "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
-    "init-db": "./scripts/initDb.js",
     "migrate": "./migrations/migrate",
-    "renew-blockchain-data": "./scripts/renewBlockchainData.js",
-    "sanity-check": "./scripts/sanityCheck.js run",
-    "seed": "./scripts/seed.js",
-    "tag": "./scripts/tag.js",
-    "monitor-blockchain": "./scripts/monitor/program.js index",
-    "cli": "./scripts/mktcli.js",
+    "init-db": "./scripts/runScript.js  initDb",
+    "renew-blockchain-data": "./scripts/runScript.js  renewBlockchainData",
+    "seed": "./scripts/runScript.js  seed",
+    "tag": "./scripts/runScript.js  tag",
+    "sanity-check": "./scripts/runScript.js  sanityCheck run",
+    "monitor-blockchain": "./scripts/runScript.js 'monitor/runMonitor' collect",
+    "cli": "./scripts/runScript.js  mktcli",
+    "script": "./scripts/runScript.js",
     "build": "npm run lint && npm run test",
     "build:ci": "npm run migrate up && npm run build",
     "start": "cd src && babel-node server.js",
@@ -42,6 +43,7 @@
     "flat": "^4.0.0",
     "newrelic": "^3.3.0",
     "node-pg-migrate": "^2.23.0",
+    "sequelize": "^4.37.6",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
