--- a/src/.env.example
+++ b/src/.env.example
@@ -1,14 +1,17 @@
 NODE_ENV=
 
-# Used on production deployments: "../webapp/build"
-WEBAPP_PATH=
-
 SERVER_PORT=
 TRANSLATIONS_PATH=
+
 CONNECTION_STRING=
+DATABASE_LOGGING=
+
+PROCESS_EVENTS_DELAY=
+
 RPC_URL=
 
 NEW_RELIC_LICENSE_KEY=
 
 LAND_REGISTRY_CONTRACT_ADDRESS=
 MARKETPLACE_CONTRACT_ADDRESS=
+LAND_REGISTRY_CONTRACT_ADDRESS=
