feat: monitor & right values on mortgage request

--- a/src/.env.example
+++ b/src/.env.example
@@ -13,4 +13,6 @@ NEW_RELIC_LICENSE_KEY=
 LAND_REGISTRY_CONTRACT_ADDRESS=
 MARKETPLACE_CONTRACT_ADDRESS=
 MORTGAGE_CREATOR_CONTRACT_ADDRESS=
+RCN_ENGINE_CONTRACT_ADDRESS=
+
 
