chore: use package-lock as cache key for CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: sudo apt-get update && sudo apt install -y libusb-1.0-0 libusb-1.0-0-dev
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-{{ checksum "package-lock.json" }}
           - v1-dependencies-
       - run: 
           name: (backend) Install packages
@@ -23,7 +23,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
       - run:
           name: (backend) Build
           command: npm run build:ci
@@ -31,7 +31,7 @@ jobs:
             CONNECTION_STRING: 'postgres://marketplace@localhost:5432/marketplace'
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "webapp/package.json" }}
+          - v1-dependencies-{{ checksum "webapp/package-lock.json" }}
           - v1-dependencies-
       - run: 
           name: (frontend) Install packages
@@ -39,7 +39,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "webapp/package.json" }}
+          key: v1-dependencies-{{ checksum "webapp/package-lock.json" }}
       - run:
           name: (frontend) Build
           command: cd webapp && npm run build
