--- a/webapp/package.json
+++ b/webapp/package.json
@@ -35,8 +35,8 @@
     "prettier": "^1.10.2",
     "prop-types": "^15.5.10",
     "query-string": "^5.1.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
