--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,29 +17,29 @@ jobs:
           keys:
           - v2-dependencies-{{ checksum "package-lock.json" }}
           - v2-dependencies-
-       - run:
-            name: (frontend) Install packages
-            command: cd webapp && npm install
-        - save_cache:
-            paths:
-              - node_modules
-            key: v2-dependencies-{{ checksum "webapp/package-lock.json" }}
-        - run:
-            name: (frontend) Build
-            command: cd webapp && npm run build
-            environment:
-              NODE_PATH: src/
-              REACT_APP_VERSION: 0.1
-              REACT_APP_ROLLBAR_ACCESS_TOKEN: ad890a7699424114a771373ee60720ac
-              REACT_APP_INTERCOM_APP_ID: z0h94kay
-              REACT_APP_SEGMENT_API_KEY: tSPRGKC4F9cqdf1VbPwH5ToqNyNXSn5d
-        - save_cache:
-            paths:
-              - webapp/build
-            key: build-{{ .Branch }}-{{ .Revision }}
+     - run:
+          name: (frontend) Install packages
+          command: cd webapp && npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v2-dependencies-{{ checksum "webapp/package-lock.json" }}
+      - run:
+          name: (frontend) Build
+          command: cd webapp && npm run build
+          environment:
+            NODE_PATH: src/
+            REACT_APP_VERSION: 0.1
+            REACT_APP_ROLLBAR_ACCESS_TOKEN: ad890a7699424114a771373ee60720ac
+            REACT_APP_INTERCOM_APP_ID: z0h94kay
+            REACT_APP_SEGMENT_API_KEY: tSPRGKC4F9cqdf1VbPwH5ToqNyNXSn5d
+      - save_cache:
+          paths:
+            - webapp/build
+          key: build-{{ .Branch }}-{{ .Revision }}
       - run: 
           name: (backend) Install packages
-          command: cd .. && npm install
+          command: npm install
       - save_cache:
           paths:
             - node_modules
@@ -53,7 +53,6 @@ jobs:
           keys:
           - v2-dependencies-{{ checksum "webapp/package-lock.json" }}
           - v2-dependencies-
-
   deploy:
     docker:
       - image: circleci/node:9.11.1
