--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "description": "Decentraland's LAND Marketplace",
   "main": "src/server.js",
   "scripts": {
-    "lint": "tslint -p src/tsconfig.json --fix",
-    "lint:fix": "tslint -p src/tsconfig.json",
+    "lint": "tslint -p tsconfig.json --fix",
+    "lint:fix": "tslint -p tsconfig.json",
     "pretest": "npm run build:tsc",
     "test": "npx mocha -r specs/specs_setup.js specs/setup.js src/**/*.spec.js",
-    "watch:test": "npm run watch:build:tsc && npx mocha -r specs/specs_setup.js specs/setup.js src/**/*.spec.js --watch",
-    "init-db": "./scripts/initDb.js",
-    "renew-blockchain-data": "./scripts/renewBlockchainData.js",
-    "sanity-check": "./scripts/sanityCheck.js run",
-    "seed": "./scripts/seed.js",
-    "tag": "./scripts/tag.js",
-    "monitor-blockchain": "./scripts/monitor/program.js index",
-    "cli": "./scripts/mktcli.js",
+    "watch:test":
+      "npm run watch:build:tsc && npx mocha -r specs/specs_setup.js specs/setup.js src/**/*.spec.js --watch",
+    "init-db": "./scripts/initDb.ts",
+    "renew-blockchain-data": "./scripts/renewBlockchainData.ts",
+    "sanity-check": "./scripts/sanityCheck.ts run",
+    "seed": "./scripts/seed.ts",
+    "tag": "./scripts/tag.ts",
+    "monitor-blockchain": "./scripts/monitor/program.ts index",
+    "cli": "./scripts/mktcli.ts",
     "migrate": "npm run build:tsc && ./migrations/migrate",
     "build": "npm run lint && npm run test && npm run build:tsc",
     "build:ci": "npm run migrate up && npm run build",
-    "build:tsc": "tsc -p src/tsconfig.json",
-    "watch:build:tsc": "tsc -p src/tsconfig.json --watch",
+    "build:tsc": "tsc -p tsconfig.json",
+    "watch:build:tsc": "tsc -p tsconfig.json --watch",
     "start": "npm run build:tsc && cd src && node server.js",
     "dev": "nodemon --exec npm run start"
   },
@@ -28,11 +29,7 @@
     "type": "git",
     "url": "https://github.com/decentraland/marketplace.git"
   },
-  "keywords": [
-    "decentraland",
-    "marketplace",
-    "dapp"
-  ],
+  "keywords": ["decentraland", "marketplace", "dapp"],
   "author": "Decentraland",
   "license": "ISC",
   "dependencies": {
@@ -51,6 +48,7 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@types/faker": "^4.1.2",
     "@types/mocha": "^5.2.0",
     "@types/sinon": "^4.3.3",
     "babel-polyfill": "^6.26.0",
@@ -63,6 +61,7 @@
     "nodemon": "^1.14.11",
     "prettier": "^1.10.2",
     "sinon": "^5.0.3",
+    "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
     "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.8.3"
