fix: patch decentraland-eth signature. patch migrations

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "tag": "./scripts/tag.ts",
     "monitor-blockchain": "./scripts/monitor/program.ts index",
     "cli": "./scripts/mktcli.ts",
-    "migrate": "npm run build:tsc && ./migrations/migrate",
+    "premigrate": "npm run build:tsc",
+    "migrate": "./migrations/migrate",
     "build": "npm run lint && npm run test && npm run build:tsc",
     "build:ci": "npm run migrate up && npm run build",
     "build:tsc": "tsc -p tsconfig.json",
