--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "renew-blockchain-data": "./scripts/renewBlockchainData.js",
     "sanity-check": "./scripts/sanityCheck.js run",
     "seed": "./scripts/seed.js",
+    "translate":
+      "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
     "tag": "./scripts/tag.js",
     "monitor-blockchain": "./scripts/monitor/program.js index",
     "cli": "./scripts/mktcli.js",
@@ -31,6 +33,7 @@
   "author": "Decentraland",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.18.2",
     "decentraland-commons": "^4.0.1",
