--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -11,6 +11,11 @@ REACT_APP_LOCAL_STORAGE_KEY=
 REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS=
 REACT_APP_LAND_REGISTRY_CONTRACT_ADDRESS=
 REACT_APP_MARKETPLACE_CONTRACT_ADDRESS=
+REACT_APP_MORTGAGE_CREATOR_CONTRACT_ADDRESS=
+REACT_APP_MORTGAGE_MANAGER_CONTRACT_ADDRESS=
+REACT_APP_RCN_ENGINE_CONTRACT_ADDRESS=
+REACT_APP_RCN_TOKEN_CONTRACT_ADDRESS=
+REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
 
 REACT_APP_ROLLBAR_ACCESS_TOKEN=
 REACT_APP_INTERCOM_APP_ID=
