--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,7 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "date-fns": "^1.29.0",
     "decentraland-commons": "^4.0.1",
-    "decentraland-eth": "^2.1.0",
+    "decentraland-eth": "^3.1.0",
     "eslint": "4.10.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
@@ -32,11 +32,11 @@
     "impetus": "^0.8.7",
     "lodash.debounce": "^4.0.8",
     "mouse-wheel": "^1.2.0",
-    "prettier": "^1.10.2",
+    "prettier": "^1.12.1",
     "prop-types": "^15.5.10",
     "query-string": "^5.1.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
