--- a/package.json
+++ b/package.json
@@ -6,17 +6,14 @@
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix .",
-    "test":
-      "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/**/*.spec.js",
-    "watch:test":
-      "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
+    "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/**/*.spec.js",
+    "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "init-db": "./scripts/initDb.js",
     "migrate": "./migrations/migrate",
     "renew-blockchain-data": "./scripts/renewBlockchainData.js",
     "sanity-check": "./scripts/sanityCheck.js run",
     "seed": "./scripts/seed.js",
-    "translate":
-      "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
+    "translate": "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
     "tag": "./scripts/tag.js",
     "monitor-blockchain": "./scripts/monitor/program.js index",
     "cli": "./scripts/mktcli.js",
@@ -29,13 +26,18 @@
     "type": "git",
     "url": "https://github.com/decentraland/marketplace.git"
   },
-  "keywords": ["decentraland", "marketplace", "dapp"],
+  "keywords": [
+    "decentraland",
+    "marketplace",
+    "dapp"
+  ],
   "author": "Decentraland",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.18.2",
+    "canvas": "^2.0.0-alpha.12",
     "decentraland-commons": "^4.0.1",
     "decentraland-eth": "^2.1.0",
     "ethereumjs-abi": "^0.6.5",
