--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,13 +26,13 @@
     "eslint": "4.10.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react": "7.4.0",
     "ethereum-blockies": "^0.1.1",
     "history": "^4.7.2",
     "impetus": "^0.8.7",
     "lodash.debounce": "^4.0.8",
     "mouse-wheel": "^1.2.0",
-    "prettier": "^1.12.1",
+    "prettier": "1.12.1",
     "prop-types": "^15.5.10",
     "query-string": "^5.1.0",
     "react": "16.2.0",
