--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,7 +26,7 @@
     "eslint": "4.10.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react": "7.4.0",
     "ethereum-blockies": "^0.1.1",
     "history": "^4.7.2",
     "impetus": "^0.8.7",
