--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "inquirer": "^5.2.0",
     "mocha": "^4.0.1",
     "nodemon": "^1.14.11",
-    "prettier": "^1.12.1",
+    "prettier": "1.12.1",
     "sinon": "^5.0.3"
   }
 }
