--- a/webapp/.eslintrc
+++ b/webapp/.eslintrc
@@ -23,6 +23,7 @@
     "react/prop-types": 0,
     "prettier/prettier": ["error", {"printWidth": 80, "singleQuote": true, "semi": false}],
     "no-console": 0,
+    "no-debugger": 0,
     "no-unused-vars": ["error", {
       "vars": "all",
       "args": "none",
