--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "prettier.printWidth": 80,
   "prettier.singleQuote": true,
   "prettier.semi": false,
+  "search.followSymlinks": false,
   "editor.tabSize": 2,
   "editor.formatOnSave": true
 }
