fix: invert back and front builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,21 @@ jobs:
           command: sudo apt-get update && sudo apt install -y libusb-1.0-0 libusb-1.0-0-dev
       - restore_cache:
           keys:
+          - backend-dependencies-{{ checksum "package-lock.json" }}
+      - run:
+          name: (backend) Install packages
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: backend-dependencies-{{ checksum "package-lock.json" }}
+      - run:
+          name: (backend) Build
+          command: npm run build:ci
+          environment:
+            CONNECTION_STRING: 'postgres://marketplace@localhost:5432/marketplace'
+      - restore_cache:
+          keys:
           - frontend-dependencies-{{ checksum "webapp/package-lock.json" }}
       - run:
           name: (frontend) Install packages
@@ -36,21 +51,6 @@ jobs:
           paths:
             - webapp/build
           key: build-{{ .Branch }}-{{ .Revision }}
-      - restore_cache:
-          keys:
-          - backend-dependencies-{{ checksum "package-lock.json" }}
-      - run:
-          name: (backend) Install packages
-          command: cd .. && npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: backend-dependencies-{{ checksum "package-lock.json" }}
-      - run:
-          name: (backend) Build
-          command: npm run build:ci
-          environment:
-            CONNECTION_STRING: 'postgres://marketplace@localhost:5432/marketplace'
 
   deploy:
     docker:
