--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,15 +15,29 @@ jobs:
           command: sudo apt-get update && sudo apt install -y libusb-1.0-0 libusb-1.0-0-dev
       - restore_cache:
           keys:
-          - v2-dependencies-{{ checksum "package-lock.json" }}
-          - v2-dependencies-
+          - backend-dependencies-{{ checksum "package-lock.json" }}
+      - run:
+          name: (backend) Install packages
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: backend-dependencies-{{ checksum "package-lock.json" }}
+      - run:
+          name: (backend) Build
+          command: npm run build:ci
+          environment:
+            CONNECTION_STRING: 'postgres://marketplace@localhost:5432/marketplace'
+      - restore_cache:
+          keys:
+          - frontend-dependencies-{{ checksum "webapp/package-lock.json" }}
       - run:
           name: (frontend) Install packages
           command: cd webapp && npm install
       - save_cache:
           paths:
             - node_modules
-          key: v2-dependencies-{{ checksum "webapp/package-lock.json" }}
+          key: frontend-dependencies-{{ checksum "webapp/package-lock.json" }}
       - run:
           name: (frontend) Build
           command: cd webapp && npm run build
@@ -37,22 +51,7 @@ jobs:
           paths:
             - webapp/build
           key: build-{{ .Branch }}-{{ .Revision }}
-      - run:
-          name: (backend) Install packages
-          command: cd .. && npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v2-dependencies-{{ checksum "package-lock.json" }}
-      - run:
-          name: (backend) Build
-          command: npm run build:ci
-          environment:
-            CONNECTION_STRING: 'postgres://marketplace@localhost:5432/marketplace'
-      - restore_cache:
-          keys:
-          - v2-dependencies-{{ checksum "webapp/package-lock.json" }}
-          - v2-dependencies-
+
   deploy:
     docker:
       - image: circleci/node:9.11.1
