--- a/package.json
+++ b/package.json
@@ -35,19 +35,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "bignumber.js": "^5.0.0",
-    "body-parser": "^1.18.2",
-    "canvas": "^2.0.0-alpha.12",
-    "decentraland-commons": "^4.0.1",
-    "decentraland-eth": "^3.1.0",
-    "ethereumjs-abi": "^0.6.5",
-    "express": "^4.16.2",
-    "flat": "^4.0.0",
-    "newrelic": "^3.3.0",
-    "node-pg-migrate": "^2.23.0",
-    "uuid": "^3.1.0"
-  },
-  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -55,17 +42,30 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
+    "bignumber.js": "^5.0.0",
+    "body-parser": "^1.18.2",
+    "canvas": "^2.0.0-alpha.12",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "decentraland-commons": "^4.0.1",
+    "decentraland-eth": "^3.1.0",
     "eslint": "4.10.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.5.1",
+    "ethereumjs-abi": "^0.6.5",
+    "express": "^4.16.2",
     "faker": "^4.1.0",
+    "flat": "^4.0.0",
     "inquirer": "^5.2.0",
     "mocha": "^4.0.1",
-    "nodemon": "^1.14.11",
+    "newrelic": "^3.3.0",
+    "node-pg-migrate": "^2.23.0",
     "prettier": "1.12.1",
-    "sinon": "^5.0.3"
+    "sinon": "^5.0.3",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.11"
   }
 }
