--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "progress": "^2.0.0"
   }
 }
