feat: Show estates on map (#252)
* feat: add estate translation to default locale

* feat: refactor shared folder to support asset component

* feat: run translate script

* fix: some imports where still pointing bad

* feat: solve estate connections and pass it to webworker

* fix: show appropiate colors for estate owners

* feat: create estate service with getByParcels and show it on the map renderer

* feat: create API endpoint for map in range

* feat: create map fetching flow to render estates

* fix: merge no-conflicts fix to dont break app

* fix: some review comments

* fix: refactor to delete isSameValue functions

* fix: using cache again on parcel canvas

* fix: parcel merging. cache. check for parcel

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,15 +18,22 @@
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": ["error", {"printWidth": 80, "singleQuote": true, "semi": false}],
+    "prettier/prettier": [
+      "error",
+      { "printWidth": 80, "singleQuote": true, "semi": false }
+    ],
     "no-console": 0,
+    "no-debugger": 0,
     "quotes": ["error", "single"],
     "no-extra-semi": ["error"],
     "semi": 0,
-    "no-unused-vars": ["error", {
-      "vars": "all",
-      "args": "none",
-      "ignoreRestSiblings": false
-    }]
+    "no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "none",
+        "ignoreRestSiblings": false
+      }
+    ]
   }
 }
