--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "seed": "./scripts/seed.js",
     "translate": "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
     "tag": "./scripts/tag.js",
-    "monitor-blockchain": "./scripts/monitor/program.js index",
+    "monitor-blockchain": "./monitor/program.js index",
     "cli": "./scripts/mktcli.js",
     "build": "npm run lint && npm run test",
     "build:ci": "npm run migrate up && npm run build",
