--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -20,3 +20,7 @@ REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
 REACT_APP_ROLLBAR_ACCESS_TOKEN=
 REACT_APP_INTERCOM_APP_ID=
 REACT_APP_SEGMENT_API_KEY=
+
+REACT_APP_FF_MORTGAGES=
+REACT_APP_FF_ESTATES=
+REACT_APP_FF_BUY_MANA=true
