--- a/etc/supervisor/mkt-app.conf
+++ b/etc/supervisor/mkt-app.conf
@@ -1,13 +1,13 @@
-[program:mkt-app]
+[program:app]
 numprocs=2
 process_name=%(process_num)s
 command=npm run start
 autostart=true
 autorestart=true
 environment=NODE_ENV="production";SERVER_PORT=500%(process_num)s
-directory=/home/ubuntu/marketplace
-stderr_logfile=/var/log/marketplace_%(process_num)s.err.log
-stdout_logfile=/var/log/marketplace_%(process_num)s.out.log
+directory=/home/ubuntu/app
+stderr_logfile=/var/log/app-%(process_num)s.err.log
+stdout_logfile=/var/log/app-%(process_num)s.out.log
 user=ubuntu
 stopasgroup=true
 stopsignal=QUIT
