--- a/etc/supervisor/mkt-monitor.conf
+++ b/etc/supervisor/mkt-monitor.conf
@@ -1,11 +1,11 @@
-[program:mkt-monitor]
+[program:monitor]
 numprocs=1
-process_name=mkt-monitor
+process_name=monitor
 command=npm run monitor-blockchain -- --from-block latest --watch
 autostart=true
 autorestart=true
 environment=NODE_ENV="production"
-directory=/home/ubuntu/marketplace
-stderr_logfile=/var/log/marketplace-monitor.err.log
-stdout_logfile=/var/log/marketplace-monitor.out.log
+directory=/home/ubuntu/app
+stderr_logfile=/var/log/app-monitor.err.log
+stdout_logfile=/var/log/app-monitor.out.log
 user=ubuntu
