chore: add build env script along with some changes to ansible

--- a/etc/ansible/playbook.yml
+++ b/etc/ansible/playbook.yml
@@ -51,6 +51,17 @@
           args:
             chdir: "{{ app_location }}"
 
+    - name: Setup app config file
+      block:
+        - name: Get contract addresses
+          get_url: 
+            url: https://contracts.decentraland.org/addresses.json
+            dest: "{{ app_location }}/scripts/addresses.json"
+        - name: Create config file
+          shell: build-env.sh "{{ network }}" "{{ connection_string }}" > ../src/.env
+          args:
+            chdir: "{{ app_location }}/scripts"
+
     - name: Setup supervisor
       block:
         - name: Install supervisor
@@ -77,10 +88,3 @@
             state: restarted
       become: yes
       become_method: sudo
-
-    - name: Setup app config file
-      block:
-        - name: 
-          get_url: 
-            url: https://contracts.decentraland.org/addresses.json
-            dest: "{{ app_location }}/addresses.json"
